# libhans-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  README_cn.md  build.rs  libhans.hpp  libhans.pyi  traj.json  traj_cartesian.json  traj_joint.json  通信指令.txt
.github/workflows/: CI.yml  build.yml
crates/key_board_test/src/: main.rs
example/handle/: Cargo.toml
example/handle/src/: main.rs
example/scripts/: 20250411.ipynb  20250411.py  move.py  recurrence-0227.py
examples/: move_path copy.rs  move_path.rs
src/: exception.rs  hans.rs  hans_s.rs  lib.rs  main.rs  network.rs  robot.rs  robot_error.rs  robot_impl.rs  robot_mode.rs  robot_param.rs  robot_state.rs
src/command_derive/: Cargo.toml
src/command_derive/src/: lib.rs
src/ffi/: mod.rs  to_c.rs  to_cxx.rs  to_py.rs
src/hans/: hans_s.rs
src/libhans_derive/: Cargo.toml
src/libhans_derive/src/: lib.rs
src/types/: box_command.rs  command.rs  command_serde.rs  force_command.rs  group_command.rs  init_command.rs  move_command.rs  state_command.rs  traverse_command.rs
tests/: move_path.rs  test_robot_impl.rs
