[package]
name = "libhans"
version = "0.1.3"
edition = "2024"

[lib]
name = "libhans"
crate-type = ["cdylib", "staticlib"]

[dependencies]
pyo3 = { version = "*", optional = true, features = ["extension-module"] }
clap = { version = "*", features = ["derive"] }
serde_repr = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
serde_with = "*"
serde-big-array = "0.5.1"
bitflags = "*"
num-traits = "*"
num-derive = "*"
thiserror = "*"
nalgebra = "*"
bincode = "*"
inventory = "*"
colored = "*"
cxx = { version = "*", optional = true }
crossterm = "*"

# [build-dependencies]
# cxx-build = "*"

command_derive = { path = "src/command_derive" }
robot_behavior = { path = "crates/robot_behavior" }

[features]
# default = ["no_robot"]
default = ["to_py"]
no_robot = []
to_c = []
to_py = ["pyo3"]
to_cxx = ["cxx"]
