[package]
name = "libhans"
version = "0.1.4"
edition = "2024"
authors = ["Yixing <yanjizhou312@163.com>"]
readme = "README.md"
repository = "https://github.com/Robot-Exp-Platform/libhans-rs"
license = "Apache-2.0"
description = "Rust bindings for the Hans robot"
categories = ["science::robotics"]
keywords = ["hans", "robot"]


[dependencies]
pyo3 = { version = "0.24", optional = true, features = ["extension-module"] }
serde_repr = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.12"
serde-big-array = "0.5.1"
bitflags = "2.9"
num-traits = "0.2"
num-derive = "0.4"
thiserror = "2.0"
nalgebra = "0.33"
bincode = "1.3"
inventory = "0.3"
colored = "3.0"
cxx = { version = "1.0", optional = true }
crossterm = "0.29"
robot_behavior = "0.3.1"
libhans_derive = { path = "src/libhans_derive", version = "0.1.1" }
clap = { version = "*", features = ["derive"] }

[features]
# default = ["no_robot"]
default = []
no_robot = []
to_c = []
to_py = ["pyo3"]
to_cxx = ["cxx"]
